# energos

./: .env example  .gitattributes  .gitignore  LICENSE  README.md  README.txt  api.md  api.txt  app.js  archive.md  docker-compose.yml  drinks.json  energy_drink_site_readme.md  improvements.md  index.html  package-lock.json  reviews.html  reviews.js  style.css  taste-map.js
backend/: Dockerfile  alembic.ini  config.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 10dddf81e735_fix_model_datetime.py  17264e7363f0_fix_user_link_in_energy_drink_add_.py  194bf47ec119_add_comment_to_reviews.py  2569d3681638_make_image_url_optional.py  351f9a314e95_fix_automation_for_created_at_updated_at.py  3d4bf6887c2f_make_no_sugar_default_false.py  42d3fe90270c_add_energy_drink_model.py  450a1e7241c7_add_energy_drink_add_requests.py  46ea59f5bd3c_update_timestamps_to_use_column_and_.py  49bc6478744e_add_from_admin_flag.py  53d965618886_flatten_taste_metrics_into_separate_.py  585053038cea_delete_rating_from_reviews.py  695d2a523768_fix_model_created_at_updated_at.py  765f1855b23d_add_favorite_drinks.py  78632180e43a_add_review_emoji_model.py  8312ec2fd9a7_make_created_at_and_updated_at_nullable.py  9bacbe3a31d7_add_created_at_and_updated_at_with_.py  9da2a9541c5f_add_auth_models.py  9e56bce6ea18_add_exclude_to_created_at_and_updated_at.py  9ecee8f91dde_add_energy_drink_id_ge_1.py  (+7 more)
backend/app/: auth.py  database.py  migration_bootstrap.py
backend/src/: auth.py  constants.py  database.py  i18n.py  localization.py  migration_bootstrap.py  rate_limit.py
(+353 files in other folders)
