[project]
name = "energy-drink-rating"
version = "0.1.0"
description = "This project is a concept website for reviewing and ranking energy drinks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.42.87",
    "context-async-sqlalchemy>=2.1.6",
    "fastapi>=0.135.3",
    "greenlet>=3.4.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.24",
    "sqlalchemy[asyncio]==2.0.48",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
